# glyder

./: README.md  pyproject.toml
.github/workflows/: run-tests.yaml
glyder/: __init__.py  read.py
tests/: test_logfile.py  test_read.py
tests/data/: goto_l00_good.ma  goto_l00_long.ma  goto_l00_short.ma
