[build-system]
requires = [
    "setuptools", 
]
build-backend = "setuptools.build_meta"

[project]
name = "glyder"
description = "Glider piloting tools"
readme = "README.md"
classifiers =[
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Oceanography",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "numpy",
    "pandas",
    "regex",
]
dynamic = ["version"]

[tool.setuptools.packages.find]
include = ["glyder*"]

[tool.setuptools.dynamic]
version = {attr = "glyder.__version__"}
